added functionality with new api endpoint
